--- a/season/templates/season/towin.html
+++ b/season/templates/season/towin.html
@@ -2,11 +2,13 @@
 {% block content %}
 {% load static %}
 {% load dict_extras %}
-<div class="row mb-3">
-  <div class="col">
+
+<!-- Header with Dropdown -->
+<div class="row align-items-center mb-3">
+  <div class="col-6">
     <h2 class="mt-4">Teams To Win</h2>
   </div>
-  <div class="col text-end">
+  <div class="col-6 text-end">
     <ul class="nav nav-pills justify-content-end">
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Other Tables</a>
@@ -29,11 +31,14 @@
     </ul>
   </div>
 </div>
-<h5 class="mt-5">Best Picks</h5>
+
+<h5 class="mt-4">Best Picks</h5>
 {% if teams %}
-<table class="table table-striped table-hover mt-3">
-  <thead class="table-dark">
-    <tr>
+<!-- Responsive Table -->
+<div class="table-responsive">
+  <table class="table table-sm table-striped table-hover table-bordered align-middle text-center">
+    <thead class="table-dark">
+      <tr>
       <th>Team</th>
       <th>Player</th>
       <th>League</th>
@@ -52,15 +57,26 @@
       <td>{{ pick.pick_type}}</td>
       <td>{{ pick.games_played }}</td>
       <td>{{ pick.total_points|floatformat:2}}</td>
-      <td>£40</td>
+      <td {% if pick.prize > 0 %} 
+          class="table-success"
+        {% endif %}
+        >
+        {% if pick.prize > 0 %}
+        £{{ pick.prize|floatformat:0 }}
+        {% else %}
+        –
+        {% endif %}
+      </td>
     </tr>
     {% endfor %}
   </tbody>
 </table>
+</div>
 
-<h5 class="mt-5">Worst Picks</h5>
-<table class="table table-striped table-hover mt-3">
-  <thead class="table-dark">
+<h5 class="mt-4">Worst Picks</h5>
+<div class="table-responsive">
+  <table class="table table-sm table-striped table-hover table-bordered align-middle text-center">
+    <thead class="table-dark">
     <tr>
       <th>Team</th>
       <th>Player</th>
@@ -80,11 +96,22 @@
       <td>{{ pick.pick_type}}</td>
       <td>{{ pick.games_played }}</td>
       <td>{{ pick.total_points|floatformat:0}}</td>
-      <td>£40</td>
+      <td 
+        {% if pick.prize > 0 %} 
+          class="table-danger"
+        {% endif %}
+        >
+        {% if pick.prize > 0 %}
+        - £{{ pick.prize|floatformat:0 }}
+        {% else %}
+        –
+        {% endif %}
+      </td>
     </tr>
     {% endfor %}
   </tbody>
 </table>
+</div>
 
 <p class="mt-3">As of: {{ batch.taken_at|date:"Y-m-d H:i" }}</p>
 
