--- a/season/templates/season/season_overall.html
+++ b/season/templates/season/season_overall.html
@@ -3,36 +3,39 @@
 {% load static %}
 {% load dict_extras %}
 
-<div class="row">
-  <div class="col">
+<!-- Header with Dropdown -->
+<div class="row align-items-center mb-3">
+  <div class="col-6">
     <h2 class="mt-4">Season Scores</h2>
   </div>
-  <div class="col">
-    <ul class="nav nav-pills">
+  <div class="col-6 text-end">
+    <ul class="nav nav-pills justify-content-end">
       <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Other Tables</a>
-      <div class="dropdown-menu" style="">
-        <a class="dropdown-item" href="#">Summary</a>
-        <a class="dropdown-item" href="#">My Teams</a>
-        <a class="dropdown-item" href="#">Money Breakdown</a>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="{% url 'season_teams_to_win' %}">Teams to Win</a>
-        <a class="dropdown-item" href="{% url 'season_teams_to_lose' %}">Teams to Lose</a>
-        <a class="dropdown-item" href="#">League Totals</a>
-        <a class="dropdown-item" href="#">Form Table</a>
-        <a class="dropdown-item" href="#">Handicaps</a>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#">This month</a>
-        <a class="dropdown-item" href="#">This week</a>
-        <a class="dropdown-item" href="#">Last 4 games</a>
-      </div>
+        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+          Other Tables
+        </a>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" href="#">Summary</a>
+          <a class="dropdown-item" href="#">My Teams</a>
+          <a class="dropdown-item" href="#">Money Breakdown</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="{% url 'season_teams_to_win' %}">Teams to Win</a>
+          <a class="dropdown-item" href="{% url 'season_teams_to_lose' %}">Teams to Lose</a>
+          <a class="dropdown-item" href="{% url 'season_by_league' %}">League Totals</a>
+          <a class="dropdown-item" href="#">Form Table</a>
+          <a class="dropdown-item" href="#">Handicaps</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">This month</a>
+          <a class="dropdown-item" href="#">This week</a>
+          <a class="dropdown-item" href="#">Last 4 games</a>
+        </div>
       </li>
     </ul>
   </div>
 </div>
 {% if overall %}
 <div class="table-responsive">
-  <table class="table table-striped table-bordered mt-3 text-center">
+  <table class="table table-sm small-font table-striped table-bordered mt-3 text-center">
     <thead class="table-dark">
       <tr>
         <th>PL</th>
