--- a/season/templates/season/tolose.html
+++ b/season/templates/season/tolose.html
@@ -21,7 +21,7 @@
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="{% url 'season_teams_to_win' %}">Teams to Win</a>
           <a class="dropdown-item" href="{% url 'season_teams_to_lose' %}">Teams to Lose</a>
-          <a class="dropdown-item" href="#">League Totals</a>
+          <a class="dropdown-item" href="{% url 'season_by_league' %}">League Totals</a>
           <a class="dropdown-item" href="#">Form Table</a>
           <a class="dropdown-item" href="#">Handicaps</a>
           <div class="dropdown-divider"></div>
@@ -37,7 +37,7 @@
 <h5 class="mt-4">Best Picks</h5>
 <!-- Responsive Table -->
 <div class="table-responsive">
-  <table class="table table-sm table-striped table-hover table-bordered align-middle text-center">
+  <table class="table table-sm small-font table-striped table-hover table-bordered align-middle text-center">
     <thead class="table-dark">
       <tr>
         <th>Team</th>
@@ -65,7 +65,7 @@
         {% if pick.prize > 0 %}
         £{{ pick.prize|floatformat:0 }}
         {% else %}
-        –
+        
         {% endif %}
       </td>
       </tr>
@@ -77,7 +77,7 @@
 {% if worst_teams %}
 <h5 class="mt-4">Worst Picks</h5>
 <div class="table-responsive">
-  <table class="table table-sm table-striped table-hover table-bordered align-middle text-center">
+  <table class="table table-sm small-font table-striped table-hover table-bordered align-middle text-center">
     <thead class="table-dark">
       <tr>
         <th>Team</th>
@@ -105,7 +105,7 @@
         {% if pick.prize > 0 %}
          - £{{ pick.prize|floatformat:0 }}
         {% else %}
-        –
+        
         {% endif %}
       </td>
       </tr>
