--- a/season/templates/season/towin.html
+++ b/season/templates/season/towin.html
@@ -36,7 +36,7 @@
 {% if teams %}
 <!-- Responsive Table -->
 <div class="table-responsive">
-  <table class="table table-sm table-striped table-hover table-bordered align-middle text-center">
+  <table class="table small-font table-sm table-striped table-hover table-bordered align-middle text-center">
     <thead class="table-dark">
       <tr>
       <th>Team</th>
@@ -64,7 +64,7 @@
         {% if pick.prize > 0 %}
         £{{ pick.prize|floatformat:0 }}
         {% else %}
-        –
+        
         {% endif %}
       </td>
     </tr>
@@ -75,7 +75,7 @@
 
 <h5 class="mt-4">Worst Picks</h5>
 <div class="table-responsive">
-  <table class="table table-sm table-striped table-hover table-bordered align-middle text-center">
+  <table class="table table-sm small-font table-striped table-hover table-bordered align-middle text-center">
     <thead class="table-dark">
     <tr>
       <th>Team</th>
@@ -104,7 +104,7 @@
         {% if pick.prize > 0 %}
         - £{{ pick.prize|floatformat:0 }}
         {% else %}
-        –
+        
         {% endif %}
       </td>
     </tr>
