--- a/season/templates/season/tolose.html
+++ b/season/templates/season/tolose.html
@@ -1,117 +1,92 @@
 {% extends "base.html" %}
-{% block content %}
+
 {% load static %}
 {% load dict_extras %}
 
-<!-- Header with Dropdown -->
-<div class="row align-items-center mb-3">
-  <div class="col-6">
-    <h2 class="mt-4">Teams To Lose</h2>
-  </div>
-  <div class="col-6 text-end">
-    <ul class="nav nav-pills justify-content-end">
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-          Other Tables
-        </a>
-        <div class="dropdown-menu">
-          <a class="dropdown-item" href="#">Summary</a>
-          <a class="dropdown-item" href="#">My Teams</a>
-          <a class="dropdown-item" href="#">Money Breakdown</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="{% url 'season_teams_to_win' %}">Teams to Win</a>
-          <a class="dropdown-item" href="{% url 'season_teams_to_lose' %}">Teams to Lose</a>
-          <a class="dropdown-item" href="{% url 'season_by_league' %}">League Totals</a>
-          <a class="dropdown-item" href="#">Form Table</a>
-          <a class="dropdown-item" href="#">Handicaps</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">This month</a>
-          <a class="dropdown-item" href="#">This week</a>
-          <a class="dropdown-item" href="#">Last 4 games</a>
-        </div>
-      </li>
-    </ul>
-  </div>
-</div>
+{% block content %}
+
+{% include "season/_season_header.html" %}
 
 <h5 class="mt-4">Best Picks</h5>
 <!-- Responsive Table -->
 <div class="table-responsive">
-  <table class="table table-sm small-font table-striped table-hover table-bordered align-middle text-center">
-    <thead class="table-dark">
-      <tr>
-        <th>Team</th>
-        <th>Player</th>
-        <th>League</th>
-        <th>Type</th>
-        <th>Pld</th>
-        <th>Pts</th>
-        <th>£</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for pick in teams %}
-      <tr>
-        <td>{{ pick.team.name }}</td>
-        <td>{{ pick.player_game.user.username }}</td>
-        <td>{{ pick.league }}</td>
-        <td>{{ pick.pick_type }}</td>
-        <td>{{ pick.games_played }}</td>
-        <td>{{ pick.total_points|floatformat:0 }}</td>
-        <td {% if pick.prize > 0 %} 
-          class="table-success"
-        {% endif %}
-        >
-        {% if pick.prize > 0 %}
-        £{{ pick.prize|floatformat:0 }}
-        {% else %}
-        
-        {% endif %}
-      </td>
-      </tr>
-      {% endfor %}
-    </tbody>
-  </table>
+    <table class="table table-sm small-font table-striped table-hover table-bordered align-middle text-center">
+        <thead class="table-dark">
+            <tr>
+                <th>Team</th>
+                <th>Player</th>
+                <th>League</th>
+                <th>Type</th>
+                <th>Pld</th>
+                <th>Pts</th>
+                <th>£</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for pick in teams %}
+            <tr>
+                <td>{{ pick.team.name }}</td>
+                <td>{{ pick.player_game.user.username }}</td>
+                <td>{{ pick.league }}</td>
+                <td>{{ pick.pick_type }}</td>
+                <td>{{ pick.games_played }}</td>
+                <td>{{ pick.total_points|floatformat:0 }}</td>
+                <td {% if pick.prize>
+                    0 %}
+                    class="table-success"
+                    {% endif %}
+                    >
+                    {% if pick.prize > 0 %}
+                    £{{ pick.prize|floatformat:0 }}
+                    {% else %}
+
+                    {% endif %}
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 </div>
 
 {% if worst_teams %}
 <h5 class="mt-4">Worst Picks</h5>
 <div class="table-responsive">
-  <table class="table table-sm small-font table-striped table-hover table-bordered align-middle text-center">
-    <thead class="table-dark">
-      <tr>
-        <th>Team</th>
-        <th>Player</th>
-        <th>League</th>
-        <th>Type</th>
-        <th>Pld</th>
-        <th>Pts</th>
-        <th>£</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for pick in worst_teams %}
-      <tr>
-        <td>{{ pick.team.name }}</td>
-        <td>{{ pick.player_game.user.username }}</td>
-        <td>{{ pick.league }}</td>
-        <td>{{ pick.pick_type }}</td>
-        <td>{{ pick.games_played }}</td>
-        <td>{{ pick.total_points|floatformat:0 }}</td>
-        <td {% if pick.prize > 0 %} 
-          class="table-danger"
-        {% endif %}
-        >
-        {% if pick.prize > 0 %}
-         - £{{ pick.prize|floatformat:0 }}
-        {% else %}
-        
-        {% endif %}
-      </td>
-      </tr>
-      {% endfor %}
-    </tbody>
-  </table>
+    <table class="table table-sm small-font table-striped table-hover table-bordered align-middle text-center">
+        <thead class="table-dark">
+            <tr>
+                <th>Team</th>
+                <th>Player</th>
+                <th>League</th>
+                <th>Type</th>
+                <th>Pld</th>
+                <th>Pts</th>
+                <th>£</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for pick in worst_teams %}
+            <tr>
+                <td>{{ pick.team.name }}</td>
+                <td>{{ pick.player_game.user.username }}</td>
+                <td>{{ pick.league }}</td>
+                <td>{{ pick.pick_type }}</td>
+                <td>{{ pick.games_played }}</td>
+                <td>{{ pick.total_points|floatformat:0 }}</td>
+                <td {% if pick.prize>
+                    0 %}
+                    class="table-danger"
+                    {% endif %}
+                    >
+                    {% if pick.prize > 0 %}
+                    - £{{ pick.prize|floatformat:0 }}
+                    {% else %}
+
+                    {% endif %}
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 </div>
 {% endif %}
 
