Season: Add My teams html and view

--- a/season/templates/season/tolose.html
+++ b/season/templates/season/tolose.html
@@ -31,11 +31,7 @@
                 <td>{{ pick.pick_type }}</td>
                 <td>{{ pick.games_played }}</td>
                 <td>{{ pick.total_points|floatformat:0 }}</td>
-                <td {% if pick.prize>
-                    0 %}
-                    class="table-success"
-                    {% endif %}
-                    >
+                <td class="{% if pick.prize > 0 %}table-success{% endif %}">
                     {% if pick.prize > 0 %}
                     £{{ pick.prize|floatformat:0 }}
                     {% else %}
@@ -72,11 +68,7 @@
                 <td>{{ pick.pick_type }}</td>
                 <td>{{ pick.games_played }}</td>
                 <td>{{ pick.total_points|floatformat:0 }}</td>
-                <td {% if pick.prize>
-                    0 %}
-                    class="table-danger"
-                    {% endif %}
-                    >
+                <td class="{% if pick.prize > 0 %}table-danger{% endif %}">
                     {% if pick.prize > 0 %}
                     - £{{ pick.prize|floatformat:0 }}
                     {% else %}
