--- a/season/templates/season/_season_header.html
+++ b/season/templates/season/_season_header.html
@@ -42,7 +42,7 @@
                 </a>
                 <div class="dropdown-menu">
                     <a class="dropdown-item" href="{% url 'season_overall' %}">Summary</a>
-                    <a class="dropdown-item" href="#">My Teams</a>
+                    <a class="dropdown-item" href="{% url 'season_my_teams' %}">My Teams</a>
                     <a class="dropdown-item" href="#">Money Breakdown</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="{% url 'season_teams_to_win' %}">Teams to Win</a>
