Season: Update table styling and interactive myteams page

--- a/season/templates/season/season_overall.html
+++ b/season/templates/season/season_overall.html
@@ -12,7 +12,7 @@
 <div class="table-responsive">
     <table class="table table-sm small-font table-striped table-bordered mt-3 text-center">
         <thead class="table-dark">
-            <tr>
+            <tr class="table-primary">
                 <th>PL</th>
                 <th>CH</th>
                 <th>L1</th>
