--- a/season/templates/season/byleagues.html
+++ b/season/templates/season/byleagues.html
@@ -14,7 +14,7 @@
 <div class="table-responsive">
     <table class="table small-font table-sm table-striped table-hover table-bordered align-middle text-center">
         <thead class="table-dark">
-            <tr>
+            <tr class="table-primary">
                 <th>Player</th>
                 <th>Games</th>
                 <th>Points</th>
@@ -22,7 +22,7 @@
         </thead>
         <tbody>
             {% for player, stats in players.items %}
-            <tr>
+            <tr {% if user.username == player %}class="table-info" {% endif %}>
                 <td>{{ player }}</td>
                 <td>{{ stats.games_played }}</td>
                 <td>{{ stats.total_points }}</td>
