--- a/season/templates/season/towin.html
+++ b/season/templates/season/towin.html
@@ -12,7 +12,7 @@
 <div class="table-responsive">
     <table class="table small-font table-sm table-striped table-hover table-bordered align-middle text-center">
         <thead class="table-dark">
-            <tr>
+            <tr class="table-primary">
                 <th>Team</th>
                 <th>Player</th>
                 <th>League</th>
@@ -24,7 +24,7 @@
         </thead>
         <tbody>
             {% for pick in teams %}
-            <tr>
+            <tr {% if user == pick.player_game.user %}class="table-info" {% endif %}>
                 <td>{{ pick.team.name }}</td>
                 <td>{{ pick.player_game.user.username }}</td>
                 <td>{{ pick.league }}</td>
@@ -51,7 +51,7 @@
 <div class="table-responsive">
     <table class="table table-sm small-font table-striped table-hover table-bordered align-middle text-center">
         <thead class="table-dark">
-            <tr>
+            <tr class="table-primary">
                 <th>Team</th>
                 <th>Player</th>
                 <th>League</th>
@@ -63,7 +63,7 @@
         </thead>
         <tbody>
             {% for pick in worst_teams %}
-            <tr>
+            <tr {% if user == pick.player_game.user %}class="table-info" {% endif %}>
                 <td>{{ pick.team.name }}</td>
                 <td>{{ pick.player_game.user.username }}</td>
                 <td>{{ pick.league }}</td>
