--- a/season/templates/season/_season_header.html
+++ b/season/templates/season/_season_header.html
@@ -51,7 +51,7 @@
                     <a class="dropdown-item" href="#">Form Table</a>
                     <a class="dropdown-item" href="#">Handicaps</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">This month</a>
+                    <a class="dropdown-item" href="{% url 'season_monthly' %}">Monthly</a>
                     <a class="dropdown-item" href="#">This week</a>
                     <a class="dropdown-item" href="#">Last 4 games</a>
                 </div>
