--- a/season/templates/season/myteams.html
+++ b/season/templates/season/myteams.html
@@ -17,6 +17,7 @@
     <table id="picks-table" class="table small-font table-sm table-striped table-hover table-bordered align-middle text-center">
         <thead class="table-dark">
             <tr class="table-primary">
+                <th>Pick #</th>
                 <th>Team</th>
                 <th>League</th>
                 <th>Pick Type</th>
@@ -34,6 +35,7 @@
         <tbody>
             {% for p in picks_data %}
             <tr>
+                <td>{{ p.pick_number }}</td>
                 <td>{{ p.team.name }}</td>
                 <td>{{ p.league }}</td>
                 <td>{{ p.pick_type|title }}</td>
