--- a/season/templates/season/_season_header.html
+++ b/season/templates/season/_season_header.html
@@ -43,17 +43,17 @@
                 <div class="dropdown-menu">
                     <a class="dropdown-item" href="{% url 'season_overall' %}">Summary</a>
                     <a class="dropdown-item" href="{% url 'season_my_teams' %}">My Teams</a>
-                    <a class="dropdown-item" href="#">Money Breakdown</a>
+                    <a class="dropdown-item" href="{% url 'season_money' %}">Money Breakdown</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="{% url 'season_teams_to_win' %}">Teams to Win</a>
                     <a class="dropdown-item" href="{% url 'season_teams_to_lose' %}">Teams to Lose</a>
                     <a class="dropdown-item" href="{% url 'season_by_league' %}">League Totals</a>
-                    <a class="dropdown-item" href="#">Form Table</a>
-                    <a class="dropdown-item" href="#">Handicaps</a>
+                    <a class="dropdown-item" href="#">(Form Table)</a>
+                    <a class="dropdown-item" href="#">(Handicaps)</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="{% url 'season_monthly' %}">Monthly</a>
-                    <a class="dropdown-item" href="#">This week</a>
-                    <a class="dropdown-item" href="#">Last 4 games</a>
+                    <a class="dropdown-item" href="#">(This week)</a>
+                    <a class="dropdown-item" href="#">(Last 4 games)</a>
                 </div>
             </li>
         </ul>
