Season: Add month end check to standings batch model

--- a/score_predict/templates/score_predict/fixtures.html
+++ b/score_predict/templates/score_predict/fixtures.html
@@ -7,7 +7,7 @@
         <div class="col-6">
             <ul class="nav nav-pills">
                 <li class="nav-item">
-                    <a class="nav-link {% if request.resolver_match.url_name == 'game_history' %}active{% endif %}"
+                    <a class="btn btn-primary" {% if request.resolver_match.url_name == 'game_history' %}active{% endif %}"
                        href="{% url 'game_history' %}">Game History</a>
                 </li>
             </ul>
