Add feature for player message links

--- a/season/templates/season/monthly.html
+++ b/season/templates/season/monthly.html
@@ -37,7 +37,7 @@
             <tr class="table-primary">
                 <th>Month</th>
                 <th>Winner</th>
-                <th> (£)</th>
+                <th> (&pound;)</th>
             </tr>
         </thead>
         <tbody>
