--- a/bank/templates/bank/money_list.html
+++ b/bank/templates/bank/money_list.html
@@ -49,7 +49,6 @@
                             <th scope="col"></th>
                             <th scope="col"></th>
                             <th scope="col"></th>
-                            <!-- <th scope="col"></th> -->
                         </tr>
                     </thead>
                     <tbody>
@@ -57,8 +56,13 @@
                         <tr class="table table-hover table-sm small-font table-striped">
                             <th scope="row">{{update.group}}</th>
                             <td class="text-muted">{{ update.created_at|date:"Y-m-d H:i" }}</td>
-                            <td>{{ update.message}} </td>
-                            <!-- <td>{{update.link}}</td> -->
+                            <td>
+                                {% if update.link %}
+                                <a class="message-link" ref= "{{ update.get_link }}">{{ update.message }} </a>
+                                {% else %}
+                                {{ update.message }}
+                                {% endif %}
+                            </td>
                         </tr>
                         {% endfor %}
                     </tbody>
